--- a/index.html
+++ b/index.html
@@ -60,14 +60,7 @@
       font-weight: 500;
     }
 
-    .signup-btn {
-      background: white;
-      color: #007bff;
-      padding: 0.5rem 1rem;
-      border-radius: 25px;
-      font-weight: bold;
-    }
-
+   
 /* Header Section */
 .header {
   padding: 4rem 1rem;
@@ -155,6 +148,8 @@
     .slider-section {
       padding: 4rem 1rem;
       text-align: center;
+      background: #fff;
+    
     }
 
     .slider-title {
@@ -163,6 +158,10 @@
     }
 
     .slider-wrapper {
+       background: #fff;
+      padding: 3rem 1rem;
+      display: flex;
+      justify-content: center;
       overflow: hidden;
       position: relative;
     }
