--- a/fortsanpedro.html
+++ b/fortsanpedro.html
@@ -211,7 +211,7 @@ const places = [
     name: "Jollibee Colon",
     type: "fastfood",
     lat: 10.2936, lng: 123.9017,
-    image: "img/image1.jpg",
+    image: "https://upload.wikimedia.org/wikipedia/en/thumb/8/8d/Jollibee_2011_logo.svg/512px-Jollibee_2011_logo.svg.png",
     link: "https://www.jollibee.com.ph"
   },
   {
